service/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: learn-k8s
spec:
  type: NodePort
  selector:
    app: nginxwebserver
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 6443
