service/nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-service
  namespace: learn-k8s
spec:
  type: NodePort
  selector:
    app: nodejs-express
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
