service/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: learn-k8s
spec:
  selector:
    app: redis
  ports:
    - name: tcp-port
      port: 6379
      targetPort: 6379
      protocol: TCP
